# Bookstore-2025

./: .gitignore  CMakeLists.txt  README.md
docs/: 前端设计文档.md  发布说明_v1.0.1.md  发布说明_v1.0.2.md  发布说明文档.md  发布说明文档_v1.0.0_win.md  总体设计文档.md  用户手册.md  系统安装手册.md  需求分析文档.md
frontend/icons/: BookShelf.icns  icons.qrc
frontend/include/: account_control_panel.hpp  add_book_dialog.hpp  book_control_panel.hpp  book_list_widget.hpp  book_table.hpp  buy_dialog.hpp  globals.hpp  login_dialog.hpp  main_window.hpp  profile_dialog.hpp  qt_common.hpp  register_dialog.hpp  top_bar.hpp
frontend/include/dialogs/: add_account_dialog.hpp  add_book_dialog.hpp  buy_dialog.hpp  delete_account_dialog.hpp  delete_book_dialog.hpp  export_csv_dialog.hpp  finance_query_dialog.hpp  import_dialog.hpp  login_account_dialog.hpp  login_dialog.hpp  modify_book_dialog.hpp  modify_password_dialog.hpp  profile_dialog.hpp  register_dialog.hpp  report_employee_dialog.hpp  report_finance_dialog.hpp  search_account_dialog.hpp  search_book_dialog.hpp  search_log_dialog.hpp
frontend/include/panels/: account_control_panel.hpp  book_control_panel.hpp  log_control_panel.hpp
frontend/include/tables/: account_table.hpp  book_table.hpp  log_table.hpp
frontend/src/: book_control_panel.cpp  book_table.cpp  globals.cpp  main.cpp  main_window.cpp  top_bar.cpp
frontend/src/panels/: account_control_panel.cpp  book_control_panel.cpp  log_control_panel.cpp
frontend/src/tables/: account_table.cpp  book_table.cpp  log_table.cpp
include/: account.hpp  book.hpp  cached_book.hpp  cached_hash_map.hpp  expect.hpp  fixed_string.hpp  hash_map.hpp  key_map.hpp  log.hpp  memory_river.hpp  string_map.hpp  unrolled_linkedlist.hpp  utils.hpp  validator.hpp
src/: account.cpp  account_tester.cpp  block_file  book.cpp  book_tester.cpp  cached_book.cpp  checker.cpp  cleanup.cpp  code.cpp  fstr.cpp  hash_block  hash_bucket  list_file  log.cpp  memory_river_tester.cpp  new_submit.cpp  submit.cpp  tester  tester.cpp  testgen.cpp  unrolled_linkedlist_tester.cpp  utils.cpp  validator.cpp  validator_tester.cpp
tester/: book_tester.cpp  log_tester.cpp
